apps/staging/authelia/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
spec:
  template:
    spec:
      containers:
        - name: authelia
      volumes:
        - name: data
          persistentVolumeClaim: null
          emptyDir: {}
