apps/staging/authelia/patch-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
spec:
  template:
    spec:
      volumes:
        - name: data
          persistentVolumeClaim: null
          emptyDir: {}
