apps/staging/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia-http
  namespace: authelia-stage
spec:
  hostnames:
    - auth.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia-https
  namespace: authelia-stage
spec:
  hostnames:
    - auth.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: authelia
          port: 9091
